updated social icon links

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <li><a href="https://github.com/NotFastEnuf" target="_blank">NFE on Github</a></li>
                     <li><a href="https://www.thingiverse.com/notfastenuf/designs" target="_blank">NFE on Thingiverse</a></li>
                     <li><a href="https://hub.docker.com/u/notfastenuf" target="_blank">NFE on Dockerhub</a></li>
-                    <li><a href="https://www.youtube.com/@_NFE" target="_blank">NFE on Youtube</a></li>
+                    <li><a href="https://www.youtube.com/@_NFE?sub_confirmation=1" target="_blank">NFE on Youtube</a></li>
                 </ul>
             </div>
         </div>
@@ -310,10 +310,10 @@
         </div>
 
         <div class="social-icons">
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-docker"></i></a>
-            <a href="#"><i class="fab fa-discord"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="https://github.com/NotFastEnuf"><i class="fab fa-github"></i></a>
+            <a href="https://hub.docker.com/u/notfastenuf"><i class="fab fa-docker"></i></a>
+            <a href="http://discordapp.com/users/294232463348072449"><i class="fab fa-discord"></i></a>
+            <a href="https://www.youtube.com/@_NFE?sub_confirmation=1"><i class="fab fa-youtube"></i></a>
         </div>
 
         <script>
