--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <li>Workshops - Connect with Makerspace Hub on Discord to express interest</li>
                     <li><a href="https://www.github.com" target="_blank">Open Source Projects</a></li>
                     <li><a href="https://www.hackaday.com" target="_blank">Hackaday</a></li>
-                    <li><a href="https://github.com/NotFastEnuf/NotFastEnuf.github.io" target="_blank">Documentation</a></li>
+                    <li><a href="https://notfastenuf.github.io/docs" target="_blank">Documentation</a></li>
                 </ul>
             </div>
         </div>
