linked up docs and posted tutorial entry

--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
         <div id="projects" class="modal">
             <div class="modal-content">
                 <i class="fas fa-times modal-close" onclick="hideModal('projects')"></i>
-                <h2><i class="fas fa-robot"></i> Featured Projects</h2>
+                <h2><i class="fas fa-robot"></i> Featured Projects and Tutorials</h2>
                 <ul>
                     <li>Coming Soon!!!</li>
-                    <li>A curated list of NFE Original Tutorials and...</li>
-                    <li>Interactive DIY projects and project recources</li>
+                    <li>A curated list of NFE Original Tutorials</li>
+                    <li><a href="https://notfastenuf.github.io/docs/MakerspaceHubTutorial.html" target="_blank">Create your own self-updating Makerspace Hub website</a></li>
                 </ul>
             </div>
         </div>
@@ -297,7 +297,7 @@
                     <li>Workshops - Connect with Makerspace Hub on Discord to express interest</li>
                     <li><a href="https://www.github.com" target="_blank">Open Source Projects</a></li>
                     <li><a href="https://www.hackaday.com" target="_blank">Hackaday</a></li>
-                    <li><a href="https://notfastenuf.github.io/docs" target="_blank">Documentation</a></li>
+                    <li><a href="https://notfastenuf.github.io/docs/MakerspaceHubTutorial.html" target="_blank">Documentation</a></li>
                 </ul>
             </div>
         </div>
