--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <ul>
                     <li>Coming Soon!!!</li>
                     <li>A curated list of NFE Original Tutorials</li>
-                    <li><a href="https://notfastenuf.github.io/docs/MakerspaceHubTutorial.html" target="_blank">Create your own self-updating Makerspace Hub website</a></li>
+                    <li><a href="https://notfastenuf.github.io/docs/MakerspaceHubTutorial" target="_blank">Create your own self-updating Makerspace Hub website</a></li>
                 </ul>
             </div>
         </div>
@@ -297,7 +297,7 @@
                     <li>Workshops - Connect with Makerspace Hub on Discord to express interest</li>
                     <li><a href="https://www.github.com" target="_blank">Open Source Projects</a></li>
                     <li><a href="https://www.hackaday.com" target="_blank">Hackaday</a></li>
-                    <li><a href="https://notfastenuf.github.io/docs/MakerspaceHubTutorial.html" target="_blank">Documentation</a></li>
+                    <li><a href="https://notfastenuf.github.io/docs/MakerspaceHubTutorial" target="_blank">Documentation</a></li>
                 </ul>
             </div>
         </div>
