--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <h2>Join the Movement</h2>
             <p>Contribute, collaborate, and create with us!</p>
             <a href="#" class="btn">Get Started</a>
-            <a href="#" class="btn">Donate Now</a>
+            <a href="https://www.paypal.me/NotFastEnuf" class="btn">Support Me</a>
         </div>
 
         <div class="social-icons">
