--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
             background-image: url('img/banner.jpg');
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
             position: relative;
             padding: 0px 0 180px;
             text-align: center;
             color: #fff;
+        }
+        
+        @media screen and (max-width: 768px) {
+            .hero {
+                height: 150px;
+            }
         }
 
         .features {
