--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
             }
         }
 
+        .hero h1 {
+            animation: fadeIn 1s ease-out;
+        }
+
+        .hero p {
+            animation: fadeIn 2s ease-out;
+        }
+
+        /* Animation */
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
         .features {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -56,6 +70,7 @@
             text-align: center;
             transition: transform 0.3s ease;
             cursor: pointer;
+            animation: fadeIn 1s ease-out;
         }
 
         .feature-card:hover {
