added hit counter and images to develop

--- a/develop/index.html
+++ b/develop/index.html
@@ -293,6 +293,11 @@
             background-image: url('img/ALIEN.png');
         }
 
+        .hit-counter {
+            display: flex;
+            justify-content: center;
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 10px;
@@ -547,6 +552,10 @@
     </div>
 
     <div class="footer" onclick="scrollToTop()" style="cursor: pointer;"></div>
+    <div class="hit-counter">
+        <script type="text/javascript" src="https://freehitcounters.org/count/h8m1"></script><br>
+        <script type='text/javascript' src='https://whomania.com/ctr?id=64862bba1ac5b74690093293037d328d944c1da2'></script>
+    </div>
     
 
     <script>
