updated links to develop

--- a/develop/index.html
+++ b/develop/index.html
@@ -274,14 +274,22 @@
         
         .social-icons a {
             /*color: #fff;*/
-            color: rgb(128, 0, 128);
+            color:  #551A8B;
             margin: 0 15px;
             font-size: 24px;
             transition: color 0.3s ease;
         }
 
+        .social-icons a:link {
+            color: #551A8B;
+        }
+
+        .social-icons a:visited {
+            color: #551A8B;
+        }
+
         .social-icons a:hover {
-            color:#fff;
+            color: white;
         }
 
         .footer {
@@ -337,7 +345,7 @@
         }
 
         a.pages-badge:hover {
-            color: rgb(128, 0, 128);
+            color:#551A8B;
         }
 
         .call-to-action a {
@@ -347,7 +355,7 @@
         }
 
         .call-to-action a.btn {
-            color:rgb(128, 0, 128);
+            color:#551A8B;
             text-decoration: underline;
             cursor: pointer;
         }
@@ -414,7 +422,7 @@
     <!-- Feature Sections with Background Videos -->
     <section class="feature-section">
         <video autoplay muted loop class="background-video">
-            <source src="video1.mp4" type="video/mp4">
+            <source src="vid/video1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
@@ -431,7 +439,7 @@
 
     <section class="feature-section">
         <video autoplay muted loop class="background-video">
-            <source src="video2.mp4" type="video/mp4">
+            <source src="vid/video2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
@@ -448,7 +456,7 @@
 
     <section class="feature-section">
         <video autoplay muted loop class="background-video">
-            <source src="video3.mp4" type="video/mp4">
+            <source src="vid/video3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
