--- a/develop/index.html
+++ b/develop/index.html
@@ -22,6 +22,8 @@
         }
 
         .container {
+            flex-wrap: wrap;
+            width: 100%;
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
@@ -30,6 +32,7 @@
         /* Fixed Transparent Header */
         .fixed-header {
             position: fixed;
+            height: 12vh;
             top: 0;
             left: 0;
             width: 100%;
@@ -63,17 +66,18 @@
         
         /* Banner Section */
         .banner {
+            display: flex;
             background: #2d2d2d;
             background-image: url('img/banner.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             position: relative;
-            padding: 150px 0 180px;
+            padding: 250px 0 100px;
             text-align: center;
             color: #fff;
-            margin-top: 50px;
-            height: 50vh; /* Half viewport height */
+            margin-top: 12vh;
+            /*height: 50vh;*/ /* Half viewport height */
             overflow: hidden;
         }
 
@@ -125,7 +129,7 @@
         /* Sticky video effect */
         .feature-section.centered {
             position: relative;
-            top: 30vh;
+            top: 32vh;
         }
 
         .background-video {
@@ -166,7 +170,7 @@
         /* Dark Section between Videos */
         .dark-section {
             width: 100%;
-            height: 30vh;
+            height: 32vh;
             /*background-color: #1a1a1a;*/
             z-index: 101;
             position: relative;
@@ -307,9 +311,9 @@
         }
 
         @media (max-width: 768px) {
-            .container {
+            /*.container {
                 padding: 10px;
-            }
+            }*/
 
             .banner h1 {
                 font-size: 2.5em;
