applied flex box to fixed-header

--- a/develop/index.html
+++ b/develop/index.html
@@ -45,6 +45,9 @@
         .fixed-header {
             position: fixed;
             height: 12vh;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             top: 0;
             left: 0;
             width: 100%;
@@ -60,9 +63,6 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-        }
-
-        .fixed-header .container {
             display: flex;
             justify-content: space-between;
             align-items: center;
