--- a/develop/index.html
+++ b/develop/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="dieI5Tnh2ql1uNdqNKST_aIhsTxvFlNl-BvJ9aL-niU" />
     <title>Makerspace Hub - Open Source Innovation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
