edited project list and icons

--- a/index.html
+++ b/index.html
@@ -725,7 +725,10 @@
             train: '<i class="fa fa-train"></i>',
             truck: '<i class="fa fa-truck"></i>',
             subway: '<i class="fa fa-subway"></i>',
-            taxi: '<i class="fa fa-taxi"></i>'
+            taxi: '<i class="fa fa-taxi"></i>',
+            space_shuttle: '<i class="fa fa-space-shuttle"></i>',
+            fighter_jet: '<i class="fa fa-fighter-jet"></i>',
+            tool: '<i class="fa fa-tools"></i>'
         };
 
         async function fetchProjectData() {
@@ -828,6 +831,12 @@
                 owner: 'NotFastEnuf',
                 repo: 'NFE_Silverware',
                 category: 'drone'
+            },
+            {
+                name: 'Document Everything - A lightweight web app to quickly document anything as html',
+                owner: 'NotFastEnuf',
+                repo: 'DOCUMENT-EVERYTHING',
+                category: 'tool'
             }
         ];
     </script>
