updated project icon on zer0

--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                 name: 'Alienwhoop Zer0 - DIY Flight Controller',
                 owner: 'brucesdad13',
                 repo: 'AlienWhoopF0',
-                category: 'drone'
+                category: 'space_shuttle'
             },
             {
                 name: 'Speed Link - GPS Speed Tracker for RC Racing',
