updated link description

--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                 category: 'drone'
             },
             {
-                name: 'Document Everything - A lightweight web app to quickly document anything as html',
+                name: 'Document Everything - A lightweight web app to quickly document anything as HTML',
                 owner: 'NotFastEnuf',
                 repo: 'DOCUMENT-EVERYTHING',
                 category: 'tool'
